Bug 157492 - Missing change tracking when insertion rows during drag & drop in Writer.
Summary: Missing change tracking when insertion rows during drag & drop in Writer.
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
24.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:24.2.0 target:7.6.3
Keywords:
Depends on:
Blocks: Track-Changes-Table
  Show dependency treegraph
 
Reported: 2023-09-28 15:10 UTC by László Németh
Modified: 2023-09-29 07:04 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description László Németh 2023-09-28 15:10:50 UTC
Description:
no tracking at drop (missing light blue color/item in Manage Changes) during drag  & drop table row

Steps to Reproduce:
1. select a row by clicking front of the row
2. drag & drop the selected row with enabled change tracking

Actual Results:
no tracking at drop (missing light blue color/item in Manage Changes)

Expected Results:
tracking, i.e. reject changes removes the inserted row


Reproducible: Always


User Profile Reset: No

Additional Info:
See also Bug 155846
Comment 1 Commit Notification 2023-09-28 20:51:17 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/65efbf64cfa30ba96bc9f0ba539eb1414b861c49

tdf#157492 sw: fix tracked drag & drop of table row

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2023-09-29 07:04:21 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/2886d09892220058d34112968d4788bc3acc08da

tdf#157492 sw: fix tracked drag & drop of table row

It will be available in 7.6.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.