sw/source/uibase/dochdl/swdtflvr.cxx
@@ -1632,12 +1632,6 @@ bool SwTransferable::Paste(SwWrtShell& rSh, TransferableDataHelper& rData, RndSt
                                     IDocumentMarkAccess::MarkType::UNO_BOOKMARK );
 
             // add a new empty row/column before the actual table row/column and go there
-            // (without setting the rows to tracked table row insertion here, do that at the end
-            // to avoid layout problems and unnecessary insertion of dummy characters for empty rows)
-            RedlineFlags eOld = rSh.GetDoc()->getIDocumentRedlineAccess().GetRedlineFlags();
-            if ( eOld & RedlineFlags::On && bRowMode )
-                rSh.GetDoc()->getIDocumentRedlineAccess().SetRedlineFlags( eOld | RedlineFlags::Ignore );
-
             const sal_uInt16 nDispatchSlot = bRowMode ? FN_TABLE_INSERT_ROW_BEFORE : FN_TABLE_INSERT_COL_BEFORE;
             pDispatch->Execute(nDispatchSlot, SfxCallMode::SYNCHRON);
             pDispatch->Execute(bRowMode ? FN_LINE_UP : FN_CHAR_LEFT, SfxCallMode::SYNCHRON);
@@ -1652,19 +1646,9 @@ bool SwTransferable::Paste(SwWrtShell& rSh, TransferableDataHelper& rData, RndSt
                     { &aCountItem, &aAfter });
             }
 
-            if ( eOld & RedlineFlags::On && bRowMode )
-                rSh.GetDoc()->getIDocumentRedlineAccess().SetRedlineFlags( eOld );
-
             // paste rows
             bool bResult = SwTransferable::PasteData( rData, rSh, nAction, nActionFlags, nFormat,
                                         nDestination, false, false, nullptr, 0, false, nAnchorType, bIgnoreComments, &aPasteContext );
-
-            // set tracked insertion, if it's not in a drag & drop action
-            if ( !rSh.ActionPend() && ( eOld & RedlineFlags::On) && bRowMode )
-            {
-                SvxPrintItem aTracked(RES_PRINT, false);
-                rSh.GetDoc()->SetRowNotTracked( *rSh.GetCursor(), aTracked );
-            }
 
             // restore cursor position
             if (pMark != nullptr)
